--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Number Guessing Game</title>
 </head>
 <body>
-    
+    <video id="winVideo" width="640" height="360" controls style="display:none;">
+        <source src="slått-kattepus.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
 </html>
